completed vendor store endpoint
