# internal/api/handlers/vendor.handler.go
@@ -1,16 +1,21 @@
 package handlers
 
 import (
+	"net/http"
+
+	"github.com/boldd/internal/application/vendors"
+	"github.com/boldd/internal/domain/common"
 	"github.com/boldd/internal/domain/dtos"
 	"github.com/boldd/internal/infrastructure/validator"
 	"github.com/gin-gonic/gin"
 )
 
 type VendorController struct {
+	command vendors.IVendorCommand
 }
 
-func NewVendorController() *VendorController {
-	return &VendorController{}
+func NewVendorController(command vendors.IVendorCommand) *VendorController {
+	return &VendorController{command: command}
 }
 
 // @Summary		"get all vendors"
@@ -24,6 +29,7 @@ func NewVendorController() *VendorController {
 // @Param		sort_by		query		string				false	"sort by"
 // @Param		order		query		string				false	"order"
 // @Failure	500			{object}	dtos.ErrorResponse	"body"
+// @Security	BearerAuth
 // @Router		/vendors [get]
 func (ctrl VendorController) Index(c *gin.Context) {
 	var filter dtos.VendorQueryFilter
@@ -33,8 +39,33 @@ func (ctrl VendorController) Index(c *gin.Context) {
 	}
 }
 
+// @Summary		"store vendors"
+// @Description	"store vendors"
+// @Tags			Vendors
+// @Accept			json
+// @Produce		json
+// @Schemes
+// @Param		payload	body		vendors.CreateVendorRequest	true	"Create vendor payload"
+// @Success	201		{string}	null								"No Content"
+// @Failure	500		{object}	dtos.ErrorResponse					"body"
+// @Security	BearerAuth
+// @Router		/vendors [post]
 func (ctrl VendorController) Store(c *gin.Context) {
+	user := common.GetAuthUser(c)
+	var payload vendors.CreateVendorRequest
+	if err := c.ShouldBindJSON(&payload); err != nil {
+		validator.GetErrors(c, err)
+		return
+	}
 
+	err := ctrl.command.Create(user, &payload)
+	if err != nil {
+		body := err.(dtos.ErrorResponse)
+		c.JSON(body.Status, body)
+		return
+	}
+
+	c.Status(http.StatusCreated)
 }
 
 func (ctrl VendorController) UpdateLogo(c *gin.Context) {
