# internal/domain/dtos/vendor.dto.go
@@ -1,8 +1,12 @@
 package dtos
 
 type VendorResponse struct {
-	ID   string `json:"id"`
-	Name string `json:"name"`
+	ID              string `json:"id"`
+	Name            string `json:"name"`
+	BusinessEmail   string `json:"business_email"`
+	BusinessAddress string `json:"business_address"`
+	BusinessPhone   string `json:"business_phone"`
+	Description     string `json:"description"`
 }
 
 type VendorQueryFilter struct {
